--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/SDC-Team-Flannel/SDC-Reviews/issues"
   },
-  "homepage": "https://github.com/SDC-Team-Flannel/SDC-Reviews#readme"
+  "homepage": "https://github.com/SDC-Team-Flannel/SDC-Reviews#readme",
+  "devDependencies": {
+    "webpack": "^5.66.0"
+  }
 }
