--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
-    "dev": "npx webpack"
+    "dev": "npx webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
     "babel-loader": "^8.2.3",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "mongoose": "^6.1.6"
   }
 }
