--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
-    "dev": "npx webpack --watch"
+    "init": "node init.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/SDC-Team-Flannel/SDC-Reviews#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "mongoose": "^6.1.6"
   }
 }
