--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/SDC-Team-Flannel/SDC-Reviews#readme",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "express": "^4.17.2",
     "mongoose": "^6.1.6"
   }
 }
