--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/SDC-Team-Flannel/SDC-Reviews#readme",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.2",
     "pg": "^8.7.1"
   }
