--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
+    "start-dev": "nodemon server/index.js",
     "init": "node init.js"
   },
   "repository": {
@@ -22,6 +23,7 @@
     "bluebird": "^3.7.2",
     "csv-parser": "^3.0.0",
     "express": "^4.17.2",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.1"
   }
 }
